testdata/rust/05_very_complex/expected/fixed_no_impl.txt
<file path="source.rs">

trait Configurable {
    fn from_source<S: DataSource>(source: &S) -> Self
}

trait DataSource {
    type Reader<'a>: std::io::Read where Self: 'a
    type Config<T: Clone>: Clone
    
    fn get_reader<'a>(&'a self) -> Self::Reader<'a>
    fn get_config<T: Clone>(&self) -> Self::Config<T>
    fn process_with_bounds<'a, T, U>(&'a self, input: T) -> U where T: AsRef<str> + 'a, U: From<&'a str> + Default, Self::Reader<'a>: std::io::BufRead
}

struct ServerConfig {
    pub host: String,
    pub port: u16,
    internal_key: Option<String>,
}

impl Configurable for ServerConfig {
    fn from_source<S: DataSource>(source: &S) -> Self
}

fn process_all_sources<F>(sources: Vec<&dyn DataSource>, mut processor: F) where F: for<'a> FnMut(Box<dyn std::io::Read + 'a>)

trait AdvancedContainer<const N: usize> {
    type Item<'a>: Clone where Self: 'a
    type Iterator<'a>: Iterator<Item = Self::Item<'a>> where Self: 'a
    
    fn get_items<'a>(&'a self) -> Self::Iterator<'a>
    fn process_batch<'a, F>(&'a self, f: F) -> [Option<Self::Item<'a>>; N] where F: Fn(usize) -> Option<Self::Item<'a>>
}

struct FixedArray<T: Clone, const N: usize> {
    data: [Option<T>; N],
}

impl<T: Clone, const N: usize> FixedArray<T, N> {
    pub const fn new() -> Self
    
    -fn is_valid_index(&self, index: usize) -> bool
    
    ~unsafe fn get_unchecked(&self, index: usize) -> Option<&T>
}

impl<T: Clone, const N: usize> AdvancedContainer<N> for FixedArray<T, N> {
    type Item<'a> = &'a T where T: 'a
    type Iterator<'a> = std::iter::FilterMap<std::slice::Iter<'a, Option<T>>, fn(&'a Option<T>) -> Option<&'a T>> where T: 'a
    
    fn get_items<'a>(&'a self) -> Self::Iterator<'a>
    
    fn process_batch<'a, F>(&'a self, f: F) -> [Option<Self::Item<'a>>; N] where F: Fn(usize) -> Option<Self::Item<'a>>
}

trait AsyncDataProcessor {
    type Output<'a>: Send where Self: 'a
    type Error: std::error::Error + Send + Sync
    
    async fn process_async<'a>(&'a self, data: &'a [u8]) -> Result<Self::Output<'a>, Self::Error>
    async fn batch_process<'a, I>(&'a self, inputs: I) -> Vec<Result<Self::Output<'a>, Self::Error>> where I: IntoIterator<Item = &'a [u8]> + Send, I::IntoIter: Send
}

-fn main()
</file>